# qaai_system

./: .env.example.env and fill credentials  .env.template  .gitignore  CHANGELOG.md  Dockerfile  MASTER_BLUEPRINT.md  PR_BODY.md  README-snippet.md  README.md  RELEASE.md  RELEASE_READINESS.md  VERSION_LOCK.md  __init__.py  apply_refactor.py  backup.py  bootstrap.py  config.example.yaml  conftest.py  core-report.html  coverage_history.json  db_utils.py  docker-compose.yml  env_config.py  env_validator.py  explain_log.jsonl  export_helpers.py  killtri.py  main.py  main_orchestrator.py  modules-report.html  project_audit.py  project_super_status.py  pyproject.toml  repo_snapshot.json  repo_snapshot.py  run_algo.py  run_phase_screening.py  scheduler.py  signal_feedback_log.csv  status_cache.json  (+6 more)
analytics/: __init__.py  allocator.py  canary_daily_summary.py  feature_engine.py  meta_model.py  model_monitor.py  paper_dashboard.py  pnl_feedback.py  promotion_engine.py  strategy_metrics.py  target_builder.py  train_meta_model.py
apps/: __init__.py  healthcheck.py  main_orchestrator.py  run_daily_meta.py  run_live_demo.py  run_live_dhan.py  run_live_engine.py
audit/: README.md  __init__.py  audit_charts.py  compliance_assertions.py  control_matrix.md  pipeline_run_20250914_060816.jsonl  pipeline_run_20250914_061235.jsonl  pipeline_run_20250914_061512.jsonl  pipeline_run_20250914_062208.jsonl  pipeline_run_20250914_062404.jsonl  pipeline_run_20250914_075043.jsonl  pipeline_run_20250914_085607.jsonl  pipeline_run_20250915_042612.jsonl  pipeline_run_20250915_061409.jsonl  (+1045 more)
(+3748 files in other folders)
